Fixed map spacing

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -25,3 +25,7 @@
 .standard-height {
   height: 800px;
 }
+
+.map-spacing {
+  padding-bottom: 60%;
+}
